	* Remove assumption that there is always an order. Allow an order to be null. This is to prevent too many carts being created for no reason..ie a call to Cart().
	* Introduce order step pipeline system. Reconfigure how order fulfilment works.
	* Upgrade Payment module
	* Introduce buyable concept from trunk
	* Move docs, tests, diagrams to a different submodule??

0.8.2
	* Modified order form to allow orders to be placed without becoming a member in the process.
	* Introduced EcommerceRole::associate_to_current_order() for choosing to join order to member on login.
	* Added CartPage action and template "finished", which displays the order just placed.
	* Copied all ecommerce member fields to Order, so that orders can be placed without member.
	* Added docs folder, along with some developer and user documentation
	* Introduced mysite/dev/ecommerce to get quick access to ecommerce dev tools
	* Began updating test suite
	* Introduced the ability to pay and cancel incomplete orders
	* Introduced ECOMMERCE_DIR constant to allow ecommerce directory to be different. Note that some paths are still make use of 'ecommerce'.

0.7 - 0.8.1	
	* Variations working again
	* Re-structured default templates to be more hierartical and extensible. Removed redundant templates.
	* Implemented new reciept design
	* Updated CMS Order interface
	* Introduced FullBillingAddress and FullShippingAddress functions on Order to provide ways to get combined address fields.

	* Merged in DBCart, Burnbright, and SunnySideUp branches
	* Depricated AllowPurchase function on Product & ProductVariation in favour of canPurcahse. SilverStripe has can____ capabilites built in, and AllowPurchase was overriding the DB field.
	* Improved ProductBulkLoader to allow setting ProductGroup, and linking up an image of the product.
	* Merged ShoppingCart and ShoppingCart_Controller into one class
	* Introduced filters/paremeters system for more complex cart situations

0.6.1